--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,23 @@
 {
-    "rewrites": [
-        {
-            "source": "/page1", "destination": "/page1/index.html"
-        },
-        {
-            "source": "/public", "destination": "/public/index.html"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "public/**/*.html",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/page1",
+      "dest": "/public/page1/index.html"
+    },
+    {
+      "src": "/",
+      "dest": "/public/index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/index.html"
+    }
+  ]
 }
